--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div>
             <h2 class="title caption" id="life">Личная жизнь Энн Хэтэуэй</h2>
             <p>Энн четыре года была в отношениях с итальянским бизнесменом Рафаэлло Фольери, которого обвинили в расхищении 50 миллионов долларов, пожертвованных миллиардером Рональдом Берклом в фонд помощи католическим церквям. Хэтэуэй была соучредителем этого и нескольких других фондов, самой актрисе обвинения не предъявили. После расставания с Фольери актриса встречалась с актером и дизайнером ювелирных украшений Адамом Шульманом. В 2012 году пара узаконила свои отношения, а весной 2016 у супругов родился сын Джонатан Роузбэнкс.</p>
-            <p><a href="gallery.html#life">Личная жизнь</a></p>
+            <p><a href="gallery.html#life">Личная жизнь.</a></p>
         </div> 
         <p><a href="table_cell.htm">Table Cell</a></p>   
         <p><a href="inline_block.html">Inline Block</a></p>
