--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
 </head>
 
 <body>
+
+  <ul class="gl">
+    <li class="li_1"><a class="silka" href="#">Home</a></li>
+    <li class="li_1"><a class="silka" href="gallery.html">Gallary</a></li>
+    <li class="li_1 rod ro_3">
+      <a class="silka" href="#">Blocks</a>
+      <ul class="gl abs">
+          <li class="li_1"><a class="silka" href="inline_block.html">Inline</a></li>
+          <li class="li_1"><a class="silka" href="table_cell.htm">Table-cell</a></li>
+          <li class="li_1 rod ro_2">
+            <a class="silka" href="#">Float</a>
+            <ul class="gl abs_2">
+              <li class="li_1"><a class="silka" href="float.html">Div</a></li>
+              <li class="li_1"><a class="silka" href="after.html">After</a></li>
+            </ul>
+          </li>
+          <li class="li_1"><a class="silka" href="flex.html">Flex</a></li>
+          <li class="li_1 rod ro">
+            <a class="silka" href="#">Grid</a>
+            <ul class="gl abs_3">
+              <li class="li_1"><a class="silka" href="grid_colums.html">Colums</a></li>
+              <li class="li_1"><a class="silka" href="grid_areas.html">Areas</a></li>
+            </ul>
+          </li>
+      </ul>
+    </li>
+  </ul>
+
     
      <div class="main">  
         <h1 class="title caption">Биография Энн Хэтэуэй</h1>
@@ -32,7 +60,7 @@
         <div>
             <h2 class="title caption" id="life">Личная жизнь Энн Хэтэуэй</h2>
             <p>Энн четыре года была в отношениях с итальянским бизнесменом Рафаэлло Фольери, которого обвинили в расхищении 50 миллионов долларов, пожертвованных миллиардером Рональдом Берклом в фонд помощи католическим церквям. Хэтэуэй была соучредителем этого и нескольких других фондов, самой актрисе обвинения не предъявили. После расставания с Фольери актриса встречалась с актером и дизайнером ювелирных украшений Адамом Шульманом. В 2012 году пара узаконила свои отношения, а весной 2016 у супругов родился сын Джонатан Роузбэнкс.</p>
-            <p><a href="gallery.html#life">Личная жизнь.</a></p>
+            <p><a href="gallery.html#life">Личная жизнь</a></p>
         </div> 
         <p><a href="table_cell.htm">Table Cell</a></p>   
         <p><a href="inline_block.html">Inline Block</a></p>
