--- a/inline_block.html
+++ b/inline_block.html
@@ -6,6 +6,35 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+
+  <ul class="gl">
+    <li class="li_1"><a class="silka" href="index.html">Home</a></li>
+    <li class="li_1"><a class="silka" href="gallery.html">Gallary</a></li>
+    <li class="li_1 rod ro_3">
+      <a class="silka" href="#">Blocks</a>
+      <ul class="gl abs">
+          <li class="li_1"><a class="silka" href="#">Inline</a></li>
+          <li class="li_1"><a class="silka" href="table_cell.htm">Table-cell</a></li>
+          <li class="li_1 rod ro_2">
+            <a class="silka" href="#">Float</a>
+            <ul class="gl abs_2">
+              <li class="li_1"><a class="silka" href="float.html">Div</a></li>
+              <li class="li_1"><a class="silka" href="after.html">After</a></li>
+            </ul>
+          </li>
+          <li class="li_1"><a class="silka" href="flex.html">Flex</a></li>
+          <li class="li_1 rod ro">
+            <a class="silka" href="#">Grid</a>
+            <ul class="gl abs_3">
+              <li class="li_1"><a class="silka" href="grid_colums.html">Colums</a></li>
+              <li class="li_1"><a class="silka" href="grid_areas.html">Areas</a></li>
+            </ul>
+          </li>
+      </ul>
+    </li>
+  </ul>
+
+
 <div class="wrapper">
   <div class="inline">
     <div class="in_first">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione incidunt assumenda error pariatur qui labore. Rem sunt ullam eum ad magnam corrupti, nesciunt totam, commodi odio impedit quos tempore cumque.</div>
