--- a/gallery.html
+++ b/gallery.html
@@ -13,7 +13,7 @@
     <li class="li_1"><a class="silka" href="#">Gallary</a></li>
     <li class="li_1 rod ro_3">
       <a class="silka" href="#">Blocks</a>
-      <ul class="gl abs">
+      <ul class="gl abs_0">
           <li class="li_1"><a class="silka" href="inline_block.html">Inline</a></li>
           <li class="li_1"><a class="silka" href="table_cell.htm">Table-cell</a></li>
           <li class="li_1 rod ro_2">
