--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
 
 <body>
 
-  <ul class="gl">
-    <li class="li_1"><a class="silka" href="#">Home</a></li>
-    <li class="li_1"><a class="silka" href="gallery.html">Gallary</a></li>
-    <li class="li_1 rod ro_3">
-      <a class="silka" href="#">Blocks</a>
-      <ul class="gl abs_0">
-          <li class="li_1"><a class="silka" href="inline_block.html">Inline</a></li>
-          <li class="li_1"><a class="silka" href="table_cell.htm">Table-cell</a></li>
-          <li class="li_1 rod ro_2">
-            <a class="silka" href="#">Float</a>
+  <ul class="gl gl_1">
+    <li><a class="spisok" href="#">Home</a></li>
+    <li><a class="spisok" href="gallery.html">Gallary</a></li>
+    <li class="spisok_verh rod ro_3">
+      <a class="spisok test_1" href="#">Blocks</a>
+      <ul class="abs_0">
+          <li><a href="inline_block.html">Inline</a></li>
+          <li><a href="table_cell.htm">Table-cell</a></li>
+          <li class="rod ro_2">
+            <a class="spisok test_2" href="#">Float</a>
             <ul class="gl abs_2">
-              <li class="li_1"><a class="silka" href="float.html">Div</a></li>
-              <li class="li_1"><a class="silka" href="after.html">After</a></li>
+              <li><a href="float.html">Div</a></li>
+              <li><a href="after.html">After</a></li>
             </ul>
           </li>
-          <li class="li_1"><a class="silka" href="flex.html">Flex</a></li>
-          <li class="li_1 rod ro">
-            <a class="silka" href="#">Grid</a>
+          <li><a href="flex.html">Flex</a></li>
+          <li class="rod ro">
+            <a class="spisok test_3" href="#">Grid</a>
             <ul class="gl abs_3">
-              <li class="li_1"><a class="silka" href="grid_colums.html">Colums</a></li>
-              <li class="li_1"><a class="silka" href="grid_areas.html">Areas</a></li>
+              <li><a href="grid_colums.html">Colums</a></li>
+              <li><a href="grid_areas.html">Areas</a></li>
             </ul>
           </li>
       </ul>
@@ -70,6 +70,11 @@
         <p><a href="grid_colums.html">Grid Colums</a></p>
         <p><a href="grid_areas.html">Grid Areas</a></p>
      </div>        
+
+     <ul class="soc_icon">
+      <li><a href="https://www.facebook.com/daria.panasenko.5"></a></li>
+      <li><a href="https://www.instagram.com/daria_nm_/"></a></li>
+     </ul>
         
 </body>
 </html>
