--- a/after.html
+++ b/after.html
@@ -7,29 +7,29 @@
 </head>
 <body class="flo">
 
-    <ul class="gl">
-        <li class="li_1"><a class="silka" href="index.html">Home</a></li>
-        <li class="li_1"><a class="silka" href="gallery.html">Gallary</a></li>
-        <li class="li_1 rod ro_3">
-          <a class="silka" href="#">Blocks</a>
-          <ul class="gl abs_0">
-              <li class="li_1"><a class="silka" href="inline_block.html">Inline</a></li>
-              <li class="li_1"><a class="silka" href="table_cell.htm">Table-cell</a></li>
-              <li class="li_1 rod ro_2">
-                <a class="silka" href="#">Float</a>
-                <ul class="gl abs_2">
-                  <li class="li_1"><a class="silka" href="float.html">Div</a></li>
-                  <li class="li_1"><a class="silka" href="#">After</a></li>
-                </ul>
-              </li>
-              <li class="li_1"><a class="silka" href="flex.html">Flex</a></li>
-              <li class="li_1 rod ro">
-                <a class="silka" href="#">Grid</a>
-                <ul class="gl abs_3">
-                  <li class="li_1"><a class="silka" href="grid_colums.html">Colums</a></li>
-                  <li class="li_1"><a class="silka" href="grid_areas.html">Areas</a></li>
-                </ul>
-              </li>
+    <ul class="mainmenu">
+        <li class="home"><a href="index.html">Home</a></li>
+        <li class="gallery"><a href="gallery.html">Gallery</a></li>
+        <li class="blocks_1">
+          <a class="blocks_1_1" href="#">Blocks</a>
+          <ul class="submenu">
+            <li><a href="inline_block.html">Inline</a></li>
+            <li><a href="table_cell.htm">Table-cell</a></li>
+            <li><a href="float.html">Float</a></li>
+            <li class="menu_fl_1">
+              <a class="menu_fl_1_1" href="#">Flex</a>
+              <ul class="menu_fl">
+                <li><a href="flex.html">Div</a></li>
+                <li><a href="#">After</a></li>
+              </ul>
+            </li>
+            <li class="menu_gr_1">
+              <a class="menu_gr_1_1" href="#">Grid</a>
+              <ul class="menu_gr">
+                <li><a href="grid_colums.html">Colums</a></li>
+                <li><a href="grid_areas.html">Areas</a></li>
+              </ul>
+            </li>
           </ul>
         </li>
       </ul>
