--- a/index.html
+++ b/index.html
@@ -8,29 +8,29 @@
 
 <body>
 
-  <ul class="gl gl_1">
-    <li><a class="spisok" href="#">Home</a></li>
-    <li><a class="spisok" href="gallery.html">Gallary</a></li>
-    <li class="spisok_verh rod ro_3">
-      <a class="spisok test_1" href="#">Blocks</a>
-      <ul class="abs_0">
-          <li><a href="inline_block.html">Inline</a></li>
-          <li><a href="table_cell.htm">Table-cell</a></li>
-          <li class="rod ro_2">
-            <a class="spisok test_2" href="#">Float</a>
-            <ul class="gl abs_2">
-              <li><a href="float.html">Div</a></li>
-              <li><a href="after.html">After</a></li>
-            </ul>
-          </li>
-          <li><a href="flex.html">Flex</a></li>
-          <li class="rod ro">
-            <a class="spisok test_3" href="#">Grid</a>
-            <ul class="gl abs_3">
-              <li><a href="grid_colums.html">Colums</a></li>
-              <li><a href="grid_areas.html">Areas</a></li>
-            </ul>
-          </li>
+  <ul class="mainmenu">
+    <li class="home"><a href="#">Home</a></li>
+    <li class="gallery"><a href="gallery.html">Gallery</a></li>
+    <li class="blocks_1">
+      <a class="blocks_1_1" href="#">Blocks</a>
+      <ul class="submenu">
+        <li><a href="inline_block.html">Inline</a></li>
+        <li><a href="table_cell.htm">Table-cell</a></li>
+        <li><a href="float.html">Float</a></li>
+        <li class="menu_fl_1">
+          <a class="menu_fl_1_1" href="#">Flex</a>
+          <ul class="menu_fl">
+            <li><a href="flex.html">Div</a></li>
+            <li><a href="after.html">After</a></li>
+          </ul>
+        </li>
+        <li class="menu_gr_1">
+          <a class="menu_gr_1_1" href="#">Grid</a>
+          <ul class="menu_gr">
+            <li><a href="grid_colums.html">Colums</a></li>
+            <li><a href="grid_areas.html">Areas</a></li>
+          </ul>
+        </li>
       </ul>
     </li>
   </ul>
@@ -70,10 +70,9 @@
         <p><a href="grid_colums.html">Grid Colums</a></p>
         <p><a href="grid_areas.html">Grid Areas</a></p>
      </div>        
-
      <ul class="soc_icon">
-      <li><a href="https://www.facebook.com/daria.panasenko.5"></a></li>
-      <li><a href="https://www.instagram.com/daria_nm_/"></a></li>
+      <li class="facebook"><a href="https://www.facebook.com/daria.panasenko.5"></a></li>
+      <li class="insta"><a href="https://www.instagram.com/daria_nm_/"></a></li>
      </ul>
         
 </body>
